--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
     <h1>Gatos Etc & Tal</h1>
     <h2>mano mto gato pprt</h2>
     <p>tem preto tem cinza tem zoiudo tem de tudo mano</p>
-    <h1>gato zoiudo olha essa porraKKKKKKKK lindo</h1>
+    <h2>o viado por tras desse site</h2>
+    <img src="gatos/gatohtml.jpg" width="300">
+    <h1>gato zoiudo olha essa porraKKKKKKK lindo</h1>
     <img src="gatos/atentose.jpg" width="300">
+    <h1>bobao ze ruela ta achando q é o Miauzart kkkkk</h1>
+    <img src="gatos/miauzart.jpg" width="300">
     <h1>oi vc quer der um (1)?</h1>
     <img src="gatos/suspeito.jpg" width="300">
+    <h1>missao Capturar o homem mais sexy do mundo bem sucedida digo miau</h1>
+    <img src="gatos/eusexy.jpg" width="300">
     <h1>when the zaza bateu pra caralho</h1>
     <img src="gatos/QUEISSOMANO.jpg" width="500">
+    <h1>sono pos brenfa</h1>
+    <img src="gatos/dormes.jpg" width="300">
 </body>
 
 </html>
