Enhance index.html with cat preferences
Added lists of things the cat likes and dislikes.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,36 @@
     <h2>o viado por tras desse site</h2>
     <img src="gatos/gatohtml.jpg" width="300">
     <h1>gato zoiudo olha essa porraKKKKKKK lindo</h1>
-    <img src="gatos/atentose.jpg" width="300">
+    <figure>
+        <img src="gatos/atentose.jpg" width="300">
+        <figcaption>gato da salsa mano isto é um teste para legendas nas foto</figcaption>
+    </figure>
     <h1>bobao ze ruela ta achando q é o Miauzart kkkkk</h1>
     <img src="gatos/miauzart.jpg" width="300">
     <h1>oi vc quer der um (1)?</h1>
     <img src="gatos/suspeito.jpg" width="300">
-    <h1>missao Capturar o homem mais sexy do mundo bem sucedida digo miau</h1>
+    <h1>missao Capturar o homem mais <em>sexy</em> do mundo bem sucedida digo miau</h1>
     <img src="gatos/eusexy.jpg" width="300">
     <h1>when the zaza bateu pra caralho</h1>
     <img src="gatos/QUEISSOMANO.jpg" width="500">
     <h1>sono pos brenfa</h1>
     <img src="gatos/dormes.jpg" width="300">
+
+    <h3>coisas q o VIADO do felino gosta mano</h3>
+    <ul>
+        <li>me da testada no mei da noite</li>
+        <li>lambe minha orelha fdp</li>
+        <li>miar pra abrir a porta do quarto ele entrar</li>
+        <li>miar pra abrir a janela do quarto pra ele sair UM MINUTO depois dele entrar tipo se decide mona??</li>
+        <li>tapinha na bunda gato safado mas quem nao gosta ne</li>
+    </ul>
+    <h3>coisas q o VIADO do felino NAO gosta mano</h3>
+    <ol>
+        <li>o gato branco ali da frente ele e mto gordo</li>
+        <li>toma banho mas depende</li>
+        <li>raçao de salmao bixo fresco da porra</li>
+        <li><strong>loiras.</strong>(laiza e exceçao te amo lasa)</li>
+    </ol>
 </body>
 
 </html>
